Fix small nuances (line break in heading, etc. )

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -14,6 +14,8 @@
     font-weight: 400;
     font-size: 48px;
     line-height: 58px;
+
+    max-width: 400px;
   }
 
   &__welbex {
